--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
-        <img class="header__logo" src="/assets/logo.svg" alt="Logo de la pagina">
+        <img class="header__logo" src="assets/logo.svg" alt="Logo de la pagina">
         <ul class="header__menu">
             <li class="header__menu-link">Home</li>
             <li class="header__menu-link">Shop</li>
@@ -26,7 +26,7 @@
             <p class="main__texts-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores debitis vero eligendi quod?</p>
             <button class="main__texts-button button-red">Subscribe</button>
         </div>
-        <img class="main__img" src="/assets/img.svg" alt="Grupo de personas animadas">
+        <img class="main__img" src="assets/img.svg" alt="Grupo de personas animadas">
     </section>
 
     <footer class="footer">
